Make cinc use local trusted CA certificates
This makes sure that Cinc can install required ruby gem right
from the start when third-party CA certificates are needed to
reach the internet and before any cookbook is executed.

--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster.yaml
@@ -197,7 +197,22 @@ phases:
           commands:
             - |
               set -v
+              PLATFORM='{{ build.PlatformName.outputs.stdout }}'
+
+              if [[ ${!PLATFORM} == RHEL ]]; then
+                CA_CERTS_FILE=/etc/ssl/certs/ca-bundle.crt
+                yum -y upgrade ca-certificates
+              elif [[ ${!PLATFORM} == DEBIAN ]]; then
+                CA_CERTS_FILE=/etc/ssl/certs/ca-certificates.crt
+                apt-get -y --only-upgrade install ca-certificates
+              fi
+
               curl --retry 3 -L {{ build.CincUrl.outputs.stdout }} | bash -s -- -v {{ ChefVersion }}
+
+              if [[ -e ${!CA_CERTS_FILE} ]]; then
+                ln -sf ${!CA_CERTS_FILE} /opt/cinc/embedded/ssl/certs/cacert.pem
+              fi
+
               /opt/cinc/embedded/bin/gem install --no-document berkshelf:{{ BerkshelfVersion }}
 
       # Download and vendor Cookbook
