--- a/tests/integration-tests/tests/update/test_update/test_update_instance_list/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/update/test_update/test_update_instance_list/pcluster.config.update.yaml
@@ -14,7 +14,7 @@ Scheduling:
         - Name: queue1-i1
           InstanceTypeList:
             - InstanceType: c5.xlarge
-            - InstanceType: c5a.large
+            - InstanceType: c5a.xlarge
           MinCount: 1
           MaxCount: 2
       Networking:
