Switch from InstanceType to single instance in InstanceTypeList in configure wizard
Use `InstanceTypeList` with single instance instead of `InstanceType` when running the pcluster configure wizard.

Signed-off-by: Luca Carrogu <carrogu@amazon.com>

--- a/cli/tests/pcluster/cli/configure/test_pcluster_configure/test_disabled_efa_no_placement_group/pcluster.config.yaml
+++ b/cli/tests/pcluster/cli/configure/test_pcluster_configure/test_disabled_efa_no_placement_group/pcluster.config.yaml
@@ -13,7 +13,8 @@ Scheduling:
     - Name: myqueue
       ComputeResources:
         - Name: c5n18xlarge
-          InstanceType: c5n.18xlarge
+          InstanceTypeList:
+            - InstanceType: c5n.18xlarge
           MinCount: 0
           MaxCount: 10
           Efa:
