Fix Slurm database config object definition
Also add some small linter fixes

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -55,6 +55,10 @@ Scheduling:
       DisableManagedDns: true
       UseEc2Hostnames: true
     EnableMemoryBasedScheduling: false
+    Database:
+      Uri: # required
+      UserName: # required
+      PasswordSecretArn: # required
   SlurmQueues:
     - Name: queue1
       CapacityType: ONDEMAND
