--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm/pcluster.config.yaml
@@ -23,7 +23,7 @@ Scheduling:
       ComputeResources:
         - Name: ondemand-i1
           InstanceTypeList:
-            - InstanceType: 4.xlarge
+            - InstanceType: c4.xlarge
         - Name: same-name-diff-queue
           InstanceTypeList:
             - InstanceType: c5.xlarge
