Add policy to allow ParallelCluster API to list group resources
This policy is required to run validators for `CapacityReservationResourceGroupArn`.

The policy of describing capacity reservation is added in this commit. Because it is covered by existing policy: `ec2:Describe*`

The same policy is added to integration tests

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/iam_policies/user-role.cfn.yaml
+++ b/tests/iam_policies/user-role.cfn.yaml
@@ -474,6 +474,11 @@ Resources:
                   aws:RequestedRegion:
                     - !Ref Region
             Sid: CloudWatchLogs
+          - Action:
+              - resource-groups:ListGroupResources
+            Resource: '*'
+            Effect: Allow
+            Sid: ResourceGroupRead
 
   ### IMAGE ACTIONS POLICIES
 
