--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -734,6 +734,12 @@ Resources:
                   aws:RequestedRegion:
                     - !Ref Region
             Sid: CloudWatchLogs
+          - Action:
+              - resource-groups:ListGroupResources
+            Resource: '*'
+            Effect: Allow
+            Sid: ResourceGroupRead
+
 
   ### IMAGE ACTIONS POLICIES
 
