Improve unit tests for Slurm Accounting
Add unit tests for the configuration of the dna.json file for Slurm Accounting

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -56,9 +56,9 @@ Scheduling:
       UseEc2Hostnames: true
     EnableMemoryBasedScheduling: false
     Database:
-      Uri: # required
-      UserName: # required
-      PasswordSecretArn: # required
+      Uri: test.databaseserver.com #required
+      UserName: test_admin # required
+      PasswordSecretArn: arn:aws:secretsmanager:us-east-1:111111111111:secret:Secret-xxxxxxxx-xxxxx  # required
   SlurmQueues:
     - Name: queue1
       CapacityType: ONDEMAND
