Fix ODCR usage with Flexible Instance Types
1. Move the code to generate RunInstances with ODCR policies to a better place to clean up the code.

2. Add CreateFleet with Capacity Reservation Resource Groups ARN policy and ListGroupResources policy to head node. These policies are required to create_fleet with Capacity Reservation Resource Group.

3. Only run validator against the first instance type of the InstanceTypes

4. Make test_efa test to use Capacity Reservation Resource Groups ARN

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
+++ b/tests/integration-tests/tests/efa/test_efa/test_efa/pcluster.config.yaml
@@ -30,7 +30,7 @@ Scheduling:
             {% if instance == "p4d.24xlarge" %}GdrSupport: true{% endif %}
 {% if instance == "p4d.24xlarge" %}
           CapacityReservationTarget:
-            CapacityReservationId: cr-0fa65fcdbd597f551
+            CapacityReservationResourceGroupArn: arn:aws:resource-groups:us-east-1:447714826191:group/EC2CRGroup
 {% endif %}
 SharedStorage:
   - MountDir: /shared
