integ-test: Fix test_scheduler_plugin failed by ODCR PRs
test_scheduler_plugin checks cluster configuration file to be the same as expected. We added ODCR section in https://github.com/aws/aws-parallelcluster/pull/4295 and Placement Group section in Compute Resource https://github.com/aws/aws-parallelcluster/pull/4330 in cluster configuration file. Therefore, the expected cluster configuration file should be changed accordingly

Signed-off-by: Hanwen <hanwenli@amazon.com>

--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_arm64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_arm64.yaml
@@ -1,4 +1,5 @@
 - CapacityType: ONDEMAND
+  CapacityReservationTarget: null
   ComputeResources:
     - CustomSettings: null
       DisableSimultaneousMultithreading: false
@@ -11,6 +12,12 @@
       Name: c1
       SchedulableMemory: null
       SpotPrice: null
+      CapacityReservationTarget: null
+      Networking:
+        PlacementGroup:
+          Enabled: null
+          Id: null
+          Name: null
   ComputeSettings:
     LocalStorage:
       EphemeralVolume: null
@@ -32,7 +39,10 @@
   Networking:
     AdditionalSecurityGroups: null
     AssignPublicIp: null
-    PlacementGroup: null
+    PlacementGroup:
+      Enabled: null
+      Id: null
+      Name: null
     Proxy: null
     SecurityGroups: null
     SubnetIds:
