--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_x86_64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues.before_update_x86_64.yaml
@@ -1,4 +1,5 @@
 - CapacityType: ONDEMAND
+  CapacityReservationTarget: null
   ComputeResources:
     - CustomSettings: null
       DisableSimultaneousMultithreading: false
@@ -11,6 +12,12 @@
       Name: c1
       SchedulableMemory: null
       SpotPrice: null
+      CapacityReservationTarget: null
+      Networking:
+        PlacementGroup:
+          Enabled: null
+          Id: null
+          Name: null
   ComputeSettings:
     LocalStorage:
       EphemeralVolume: null
@@ -32,7 +39,10 @@
   Networking:
     AdditionalSecurityGroups: null
     AssignPublicIp: null
-    PlacementGroup: null
+    PlacementGroup:
+      Enabled: null
+      Id: null
+      Name: null
     Proxy: null
     SecurityGroups: null
     SubnetIds:
