Add validation recipe call to image validation
Added call to aws-parallelcluster::validation recipe to the BuilderImage
validation component template in order to allow validation to be
carried out within chef. This should enable us to move validation
to chef recipes with easier access to node configuration. This should
help us not exceed the maximum number of steps allowed in a component
because we can now add validation to the chef cookbooks instead of
adding new steps to the template.

Added validation recipe for validation MySQL client package installation.

--- a/cli/src/pcluster/resources/imagebuilder/parallelcluster_validate.yaml
+++ b/cli/src/pcluster/resources/imagebuilder/parallelcluster_validate.yaml
@@ -399,3 +399,11 @@ phases:
                 fi
                 echo "dpkg test passed"
               fi
+      - name: ChefValidations
+        action: ExecuteBash
+        inputs:
+          commands:
+            - |
+              set -vx
+
+              cinc-client --local-mode --config /etc/chef/client.rb --log_level info --force-formatter --no-color --chef-zero-port 8889 --json-attributes /etc/parallelcluster/image_dna.json --override-runlist aws-parallelcluster::validations
