Remove scheduler_plugin tests from develop config
Signed-off-by: Francesco Giordano <giordafr@amazon.it>

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -1,4 +1,5 @@
 {%- import 'common.jinja2' as common with context -%}
+{%- set SCHEDULER_PLUGIN_TESTS = false -%}
 ---
 scheduler-plugins:
   slurm_plugin:
