--- a/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_scaling/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm/test_slurm_scaling/pcluster.config.yaml
@@ -22,11 +22,19 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: dummy-1
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.large
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.large
+          {% endif %}
         - Name: ondemand1-i1
+          {% if scheduler == "plugin" %}
+          InstanceType: {{ instance }}
+          {% else %}
           InstanceTypeList:
             - InstanceType: {{ instance }}
+          {% endif %}
           MinCount: 2   # FIXME expecting 3 initial nodes and a min count of 2
     - Name: ondemand2
       Networking:
@@ -34,9 +42,17 @@ Scheduling:
           - {{ private_subnet_id }}
       ComputeResources:
         - Name: dummy-2
+          {% if scheduler == "plugin" %}
+          InstanceType: c5.large
+          {% else %}
           InstanceTypeList:
             - InstanceType: c5.large
+          {% endif %}
         - Name: ondemand2-i1
+          {% if scheduler == "plugin" %}
+          InstanceType: {{ instance }}
+          {% else %}
           InstanceTypeList:
             - InstanceType: {{ instance }}
+          {% endif %}
           MinCount: 2
