Add support for Slurm Accounting
Add config, schema and validators for Slurm Accounting

Add unit tests for Database validators

Add GetSecretValue IAM permissions for Slurm Accounting

Update Changelog

Signed-off-by: Jacopo De Amicis <jdamicis@amazon.it>

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -55,6 +55,10 @@ Scheduling:
       DisableManagedDns: true
       UseEc2Hostnames: true
     EnableMemoryBasedScheduling: false
+    Database:
+      Uri: test.databaseserver.com #required
+      UserName: test_admin # required
+      PasswordSecretArn: arn:aws:secretsmanager:us-east-1:111111111111:secret:Secret-xxxxxxxx-xxxxx  # required
   SlurmQueues:
     - Name: queue1
       CapacityType: ONDEMAND
