Update PG/ODCR validator to only check if the cr_target exists and account for no id or arn
Also, refactors the validator to use a smaller set of data

--- a/cli/tests/pcluster/validators/test_all_validators/test_scheduler_plugin_all_validators_are_called/scheduler_plugin_1.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_scheduler_plugin_all_validators_are_called/scheduler_plugin_1.yaml
@@ -185,6 +185,12 @@ Scheduling:
           Efa:
             Enabled: true
             GdrSupport: false
+        - Name: pg-omit-odcr-arn
+          InstanceType: c6gn.xlarge
+          MinCount: 1
+          MaxCount: 10
+          CapacityReservationTarget:
+            CapacityReservationResourceGroupArn: 'arn:aws:resource-groups:us-west-2:944054287730:group/odcr-grp'
       Iam:
         InstanceProfile: arn:aws:iam::aws:instance-profile/CustomNodeInstanceProfile
       Image:
