Add validation for the Capacity Reservation Resource Group to be created from the cli
Service Linked Groups (SLG) are required in order to use Capacity Reservation
Resource Groups when launching instances.  SLGs can only be created from the
CLI or API even though Tag Based or Stack Based Resource Groups can be created
from the console.  Parallel Cluster thus requires that all Capacity Reservation
Resource Groups are SLGs created from the CLI.

Signed-off-by: Ryan Anderson <ndry@amazon.com>

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -736,6 +736,7 @@ Resources:
             Sid: CloudWatchLogs
           - Action:
               - resource-groups:ListGroupResources
+              - resource-groups:GetGroupConfiguration
             Resource: '*'
             Effect: Allow
             Sid: ResourceGroupRead
