--- a/tests/iam_policies/user-role.cfn.yaml
+++ b/tests/iam_policies/user-role.cfn.yaml
@@ -476,6 +476,7 @@ Resources:
             Sid: CloudWatchLogs
           - Action:
               - resource-groups:ListGroupResources
+              - resource-groups:GetGroupConfiguration
             Resource: '*'
             Effect: Allow
             Sid: ResourceGroupRead
@@ -764,7 +765,7 @@ Resources:
           - Action:
               - iam:AttachRolePolicy
               - iam:DetachRolePolicy
-            Resource: 
+            Resource:
               - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:role/parallelcluster/*
               # Needed to enable capacity reservation access without creating a custom policy in tests
               - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonEC2FullAccess
