[IntegrationTests] Use capacity-optimized allocation strategy to reduce InsufficientInstanceCapacity errors
Signed-off-by: Eddy Mwiti <eddmwiti@amazon.com>

--- a/tests/integration-tests/tests/intel_hpc/test_intel_hpc/test_intel_hpc/pcluster.config.yaml
+++ b/tests/integration-tests/tests/intel_hpc/test_intel_hpc/test_intel_hpc/pcluster.config.yaml
@@ -15,6 +15,10 @@ Scheduling:
   Scheduler: {{ scheduler }}
   {% if scheduler == "awsbatch" %}AwsBatchQueues:{% else %}SlurmQueues:{% endif %}
     - Name: queue-0
+      {% if scheduler == "slurm" %}
+      AllocationStrategy: capacity-optimized
+      CapacityType: SPOT
+      {% endif %}
       ComputeSettings:
         LocalStorage:
           RootVolume:
