Fix admin password reference

--- a/cloudformation/database/serverless-database.yaml
+++ b/cloudformation/database/serverless-database.yaml
@@ -260,7 +260,7 @@ Resources:
       EnableHttpEndpoint: false
       EngineMode: serverless
       MasterUsername: !Ref ClusterAdmin
-      MasterUserPassword: AdminPasswordSecretString
+      MasterUserPassword: !Ref AdminPasswordSecretString
       ScalingConfiguration:
         AutoPause: true
         MaxCapacity: !Ref MaxCapacity
