First integration test for ODCR
Builds a stack for odcr that includes three reservations and one
reservation resource group.  This tests that valid configurations of
open ODCR, targeted ODCR, and PG ODCRs can be used.

Add change notice to changelog for the Queue level placement group

Signed-off-by: Ryan Anderson <ndry@amazon.com>

--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -371,6 +371,10 @@ networking:
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
         schedulers: ["slurm"]
+  test_on_demand_capacity_reservation.py::test_on_demand_capacity_reservation:
+    dimensions:
+      - regions: [ "us-west-2" ]
+        oss: [ "alinux2" ]
 scaling:
   test_mpi.py::test_mpi:  # TODO: move outside of the scaling dir
     dimensions:
