Fix InstanceType config in integration tests
Signed-off-by: David Pratt <davprat@amazon.com>

--- a/tests/integration-tests/tests/schedulers/test_slurm_accounting/test_slurm_accounting_disabled_to_enabled_update/pcluster.config.yaml
+++ b/tests/integration-tests/tests/schedulers/test_slurm_accounting/test_slurm_accounting_disabled_to_enabled_update/pcluster.config.yaml
@@ -17,8 +17,7 @@ Scheduling:
     - Name: compute
       ComputeResources:
         - Name: cit
-          Instances:
-            - InstanceType: {{ instance }}
+          InstanceType: {{ instance }}
           MinCount: 0
           MaxCount: 10
       Networking:
