Add on_node_updated to the dna_json cluster config, adding various tests
Signed-off-by: Edoardo Antonini <eantonin@amazon.com>

--- a/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
+++ b/cli/tests/pcluster/example_configs/scheduler_plugin.full.yaml
@@ -42,6 +42,11 @@ HeadNode:
       Args:
         - arg1
         - arg2
+    OnNodeUpdated:
+      Script: https://test.tgz  # s3:// | https://
+      Args:
+        - arg1
+        - arg2
   Iam:
     InstanceRole: arn:aws:iam::aws:role/CustomHeadNodeRole
   Imds:
