Add resource prefix at resource level
Add regex to handle IAM naming conventions for Path and role prefix
Add a Validator and Unit Tests for different test cases
Add ResourcePrefix in YAML file for all validators tests

--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_2.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_2.yaml
@@ -39,3 +39,5 @@ SharedStorage:
     StorageType: FsxLustre
     FsxLustreSettings:
       FileSystemId: fs-12345678123456789
+Iam:
+  ResourcePrefix: /prefix/
