Update ChangeLog to add Resource Prefix enhancement
Update in CHANGELOG to mention new enhancement for Resource Prefix Config option in 3.4
Change parameter names to match the config option names
Fix Test Cases to remove duplicate cases and combine multiple cases

PR Link:
https://github.com/aws/aws-parallelcluster/pull/4524

--- a/cli/tests/pcluster/validators/test_all_validators/test_scheduler_plugin_all_validators_are_called/scheduler_plugin_1.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_scheduler_plugin_all_validators_are_called/scheduler_plugin_1.yaml
@@ -235,7 +235,7 @@ SharedStorage:
       StorageType: HDD  # HDD | SSD
 Iam:
   PermissionsBoundary: arn:aws:iam::aws:policy/boundary
-  ResourcePrefix: /boundary/role-prefix
+  ResourcePrefix: /path-prefix/name-prefix
   Roles:
     LambdaFunctionsRole: String  # arn:aws:iam::aws:role/CustomResourcesLambdaRole
 Monitoring:
