--- a/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_2.yaml
+++ b/cli/tests/pcluster/validators/test_all_validators/test_slurm_all_validators_are_called/slurm_2.yaml
@@ -40,4 +40,4 @@ SharedStorage:
     FsxLustreSettings:
       FileSystemId: fs-12345678123456789
 Iam:
-  ResourcePrefix: /prefix/
+  ResourcePrefix: /path-prefix/name-prefix
