Check S3Access Bucket Policy has Name prefix
Add Test case to check Name Prefix has been appended to S3Access Policy when a S3 Bucket is provided in HeadNode and Queue IAM section of YAML.
Code linting change for IAM Validator to remote unnecessary condition
Code Linting Change in Hashing suggested use of sha256

--- a/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_Iam_resource_prefix_build_in_cdk/resourcePrefix.both_path_n_role_prefix_with_s3.yaml
+++ b/cli/tests/pcluster/templates/test_cw_dashboard_builder/test_Iam_resource_prefix_build_in_cdk/resourcePrefix.both_path_n_role_prefix_with_s3.yaml
@@ -1,5 +1,7 @@
 Image:
   Os: alinux2
+Iam:
+  ResourcePrefix: /path-prefix/name-prefix
 HeadNode:
   InstanceType: String
   Ssh:
@@ -24,4 +26,3 @@ Scheduling:
         S3Access:
           - BucketName: testbucketpball
             EnableWriteAccess: True
- 
