Add a schema validator to block customers to use onNodeUpdated with AWS Batch
Signed-off-by: Edoardo Antonini <eantonin@amazon.com>

--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/awsbatch.on_node_configured.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/awsbatch.on_node_configured.yaml
@@ -7,7 +7,7 @@ HeadNode:
   Ssh:
     KeyName: ec2-key-name
   CustomActions:
-    OnNodeStart:
+    OnNodeConfigured:
       Script: https://test.tgz  # s3:// | https://
       Args:
         - arg1
