--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/awsbatch.on_node_updated.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/awsbatch.on_node_updated.yaml
@@ -7,7 +7,7 @@ HeadNode:
   Ssh:
     KeyName: ec2-key-name
   CustomActions:
-    OnNodeStart:
+    OnNodeUpdated:
       Script: https://test.tgz  # s3:// | https://
       Args:
         - arg1
