--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/slurm.no_actions.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/slurm.no_actions.yaml
@@ -6,21 +6,15 @@ HeadNode:
     SubnetId: subnet-12345678
   Ssh:
     KeyName: ec2-key-name
-  CustomActions:
-    OnNodeStart:
-      Script: https://test.tgz  # s3:// | https://
-      Args:
-        - arg1
-        - arg2
 Scheduling:
-  Scheduler: awsbatch
-  AwsBatchQueues:
+  Scheduler: slurm
+  SlurmQueues:
     - Name: queue1
       Networking:
         SubnetIds:
           - subnet-12345678
       ComputeResources:
         - Name: compute_resource1
-          InstanceTypes:
-            - c5.xlarge
-          MaxvCpus: 10
+          InstanceType: c5.2xlarge
+        - Name: compute_resource2
+          InstanceType: c4.2xlarge
