--- a/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/slurm.on_node_configured.yaml
+++ b/cli/tests/pcluster/schemas/test_cluster_schema/test_scheduler_constraints_for_custom_actions/slurm.on_node_configured.yaml
@@ -7,20 +7,20 @@ HeadNode:
   Ssh:
     KeyName: ec2-key-name
   CustomActions:
-    OnNodeStart:
+    OnNodeConfigured:
       Script: https://test.tgz  # s3:// | https://
       Args:
         - arg1
         - arg2
 Scheduling:
-  Scheduler: awsbatch
-  AwsBatchQueues:
+  Scheduler: slurm
+  SlurmQueues:
     - Name: queue1
       Networking:
         SubnetIds:
           - subnet-12345678
       ComputeResources:
         - Name: compute_resource1
-          InstanceTypes:
-            - c5.xlarge
-          MaxvCpus: 10
+          InstanceType: c5.2xlarge
+        - Name: compute_resource2
+          InstanceType: c4.2xlarge
