Add hpc6id tests for develop
Signed-off-by: Edoardo Antonini <eantonin@amazon.com>

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -26,6 +26,10 @@ test-suites:
           oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
           schedulers: ["slurm"]
         - regions: [ "us-east-2" ]
+          instances: ["hpc6id.32xlarge"]
+          oss: ["alinux2"]
+          schedulers: [ "slurm" ]
+        - regions: [ "us-east-2" ]
           instances: [{{ common.instance("instance_type_1") }}]
           oss: [ "alinux2", "centos7", "ubuntu2004" ]
           schedulers: [ "slurm" ]
